--- a/PyTest_POM_PoC/.gitignore
+++ b/PyTest_POM_PoC/.gitignore
@@ -1,10 +1,5 @@
 venv
+.pytest-cache
 __pycache__
 tests/__pycache__
 pages/__pycache__
-
-### IntelliJ IDEA ###
-.idea
-
-### Mac OS ###
-.DS_Store
